# brieflow

./: .gitignore  .gitmodules  .readthedocs.yaml  BRIEFLOW_ARCHITECTURE_AND_OMEZARR_PLAN.md  Dockerfile  LICENSE  README.md  brieflow_configuration_env.yml  brieflow_main_env.yml  brieflow_workflows_env.yml  build_docker.sh  cloudbuild.yaml  docker-entrypoint.sh  environment.yml  pyproject.toml  requirements.yaml  test.ipynb  test_cluster_eval.ipynb  test_perturbation_score.ipynb  test_perturbation_score_post_align.ipynb  workflow_comparison.md
.github/: pull_request_template.md
.github/workflows/: integration_test.yml  ruff-check-format.yml  ruff-check.yml  ruff-format.yml  test_analysis.yml
analysis/: 0.configure_preprocess_params.ipynb  2.configure_sbs_process_params.ipynb  3.configure_phenotype_process_params.ipynb
analysis/slurm/: config.yaml
docs/: requirements.txt
docs/source/: 0.brieflow_brieflow_analysis.md  1.before_you_screen.md  2.installation_analysis_setup.md  2.screen_analysis_setup.md  3.running_modules.md  4.development.md  4.visualization.md  5.development.md  before_you_screen.md  brieflow_analysis.md  brieflow_analysis_setup.md  brieflow_brieflow_analysis.md  conf.py  config_glossary.md  development.md  example_analyses.md  index.md  index.rst  running_modules.md  screen_analysis_setup.md  zarr_support.md
example_analysis/: 0.configure_preprocess_params.ipynb  0.configure_preprocessing_params.ipynb  1.run_preprocessing.sh  1.run_preprocessing_slurm.sh  10.run_cluster.sh  10.run_cluster_process.sh  2.configure_sbs_params.ipynb  2.configure_sbs_process_params.ipynb  3.configure_phenotype_process_params.ipynb  3.run_sbs_process.sh  3.run_sbs_process_slurm.sh  4.run_sbs_phenotype.sh  4.run_sbs_phenotype_processes.sh  4.run_sbs_phenotype_processes_slurm.sh  4.run_sbs_phenotype_slurm.sh  5.configure_merge_params.ipynb  6.run_merge.sh  6.run_merge_process.sh  6.run_merge_process_slurm.sh  6.run_merge_slurm.sh  7.configure_aggregate_params.ipynb  8.run_aggregate.sh  8.run_aggregate_process.sh  8.run_aggregate_process_slurm.sh  8.run_aggregate_slurm.sh  9.configure_cluster_params.ipynb  combined_metadata__phenotype.hdf  combined_metadata__sbs.hdf  config_setup.ipynb  copy_denali_files.ipynb  run_analysis.sh  run_entire_analysis.sh  run_entire_analysis_slurm.sh  test.ipynb  test_aggregate_slurm.err  test_aggregate_slurm.out  test_aggregate_slurm.sh  test_merge.ipynb  test_montage_creation.ipynb
example_analysis/config/: config.yaml  config.yml  config_modified.yml  phenotype_samples.tsv  sbs_samples.tsv  transformations.tsv
example_analysis/slurm/: config.yaml
tasks/: omezarr_conversion_analysis.md  omezarr_flow_diagram.md  omezarr_tiff_migration_plan.md
tests/: conftest.py  download_test_data.py  small_test_analysis_setup.py  test_coarse_align.py  test_compartment_filter.py  test_image_stitch_merge.py  test_merge_levers.py  test_omezarr.py  test_pseudotile_merge.py  test_stitching_core.py
tests/integration/: test_omezarr_exports.py  test_omezarr_writer.py  test_output_formats_exist.py  test_preprocess.py  test_preprocess_zarr.py  test_preprocess_zarr_outputs.py
tests/small_test_analysis/: 0.configure_preprocess_params.ipynb  compare_images.py  run_brieflow.sh  run_brieflow_omezarr.sh  run_snakemake.sh  screen.yaml  small_test_analysis_setup.py
tests/small_test_analysis/config/: aggregate_combo.tsv  barcode_library.tsv  cell_data_metadata_cols.tsv  cluster_combo.tsv  config.yml  config_omezarr.yml  config_zarr.yml  dummy_classifier.dill  gene_mapping_ensembl110.tsv  multiclass_lgb_standard_model.dill  multiclass_xgb_none_model.dill  regen_dummy_classifier.py  segmentation_combo.tsv  segmentation_samples.tsv
tests/unit/: test_io.py  test_nd2_to_omezarr_script.py  test_omezarr_io.py  test_omezarr_ngff_validation.py  test_omezarr_writer.py  test_omezarr_writer_ngff_validation.py  test_omezarr_writer_scales.py  test_preprocess_metadata_pixel_sizes.py  test_preprocess_module.py  test_target_utils.py
tests/viewer/: load_omezarr_in_napari.py  load_omezarr_notebook.py
visualization/: Cluster_Analysis.py  Experimental_Overview.py  README.md  Screen_Overview.py  run-visualization.sh
visualization/pages/: 1_Pipeline_Stats.py  2_Analysis_Overview.py  2_Config_Overview.py  3_Quality_Control.py  3_Screen_Overview.py  4_Analysis_Overview.py  4_Cluster_Analysis.py
visualization/src/: config.py  filesystem.py  filtering.py  rendering.py
workflow/: Snakefile  Snakefile_well  Snakefile_well_debug  Snakefile_well_plate_level  config.yml
workflow/envs/: aggregate.yml  aggregate_process.yml  cluster.yml  cluster_process.yml  merge.yml  merge_process.yml  phenotype.yml  phenotype_process.yml  preprocess.yml  sbs.yml  sbs_process.yml  sbs_processing.yml
workflow/rules/: aggregate.smk  aggregate_process.smk  cluster.smk  cluster_process.smk  merge.smk  merge_process.smk  phenotype.smk  phenotype_process.smk  phenotype_well.smk  preprocess.smk  preprocess_well.smk  sbs.smk  sbs_process.smk  sbs_processing.smk  sbs_well.smk
workflow/targets/: aggregate.smk  aggregate_process.smk  cluster.smk  cluster_process.smk  merge.smk  merge_process.smk  phenotype.smk  phenotype_process.smk  phenotype_well.smk  preprocess.py  preprocess.smk  preprocess_helper.py  preprocess_well.smk  sbs.smk  sbs_process.smk  sbs_well.smk
workflow/tests/: OMEZARR_TEST_SUMMARY.md  README.md  test_omezarr_compliance.py
(+348 files in other folders)
