[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "BrieFlow"
version = "1.3.1"
description = "Package for processing data from optical poooled screens."
readme = "README.md"
license = { file = "LICENSE" }
dependencies = [
  "snakemake==8.30.0",
  "snakemake-executor-plugin-slurm==1.4.0",
  "sphinx-rtd-theme==3.0.2",
  "ipykernel==6.29.5",
  "pandas==2.3.0",
  "numpy==2.0.2",
  "pyyaml==6.0.2",
  "nd2==0.10.3",
  "scikit-image==0.25.2",
  "joblib==1.5.1",
  "cellpose==3.1.0",
  "tensorflow==2.19.0",
  "csbdeep==0.8.1",
  "microfilm==0.3.0",
  "seaborn==0.13.2",
  "tifffile==2025.6.11",
  "mahotas==1.4.18",
  "python-igraph==0.11.9",
  "leidenalg==0.10.2",
  "phate==1.0.11",
  "statsmodels==0.14.4",
  "dill==0.4.0",
  "xgboost==3.0.0",
  "ruff==0.11.9",
  "streamlit==1.45.1",
  "plotly==6.1.2",
  "pytest==8.4.0",
  "matplotlib==3.10.3",
  "adjusttext==1.3.0",
  "torch==2.7.1",
  "spotiflow==0.5.7",
  "stardist==0.9.1",
  "levenshtein==0.27.1"
]


[tool.setuptools]
package-dir = {"" = "workflow"}
packages = ["lib"]

[tool.ruff]

[tool.ruff.lint]
# Configure pydocstyle settings under lint
select = ["D"]
pydocstyle = { convention = "google" }

[tool.ruff.lint.per-file-ignores]
# Ignore docstring check for script and notebook files
"workflow/scripts/*.py" = ["D100", "D103"]
"*.ipynb" = ["D100", "D103"]
# Ignore all checks for external files
"workflow/lib/external/*.py" = ["ALL"]
# Ignore all checks for docs
"docs/source/*.py" = ["ALL"]
# Ignore all checks for tests
"tests/*.py" = ["ALL"]
# Visualization code
"visualization/*.py" = ["ALL"]
