[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "BrieFlow"
version = "1.4.9"
description = "Package for processing data from optical poooled screens."
readme = "README.md"
license = { file = "LICENSE" }
dependencies = [
  "snakemake==9.19.0",
  "snakemake-executor-plugin-slurm==2.6.0",
  "sphinx-rtd-theme==3.1.0",
  "ipykernel==6.29.5",
  "pandas==2.3.0",
  "numpy==2.0.2",
  "pyyaml==6.0.3",
  "nd2==0.11.3",
  "scikit-image==0.26.0",
  "joblib==1.5.3",
  "cellpose==3.1.0",
  "tensorflow==2.21.0",
  "csbdeep==0.8.2",
  "microfilm==0.3.0",
  "seaborn==0.13.2",
  "tifffile==2026.3.3",
  "mahotas==1.4.18",
  "cp-measure==0.1.18",
  "python-igraph==1.0.0",
  "leidenalg==0.11.0",
  "phate==2.0.0",
  "statsmodels==0.14.6",
  "dill==0.4.1",
  "xgboost==3.2.0",
  "ruff==0.15.8",
  "streamlit==1.55.0",
  "plotly==6.6.0",
  "pytest==9.0.2",
  "matplotlib==3.10.8",
  "adjusttext==1.3.0",
  "torch==2.11.0",
  "spotiflow==0.6.4",
  "stardist==0.9.2",
  "dexp==2023.4.10.686",
  "levenshtein==0.27.3",
  "ipywidgets==8.1.8",
  "jupyterlab-widgets==3.0.15",
  "widgetsnbextension==4.0.14",
  "lightgbm==4.6.0",
  "scikit-learn==1.8.0",
  "polars==1.39.3",
]


[tool.setuptools]
package-dir = {"" = "workflow"}
packages = ["lib"]

[tool.ruff]

[tool.ruff.lint]
# Configure pydocstyle settings under lint
select = ["D"]
pydocstyle = { convention = "google" }

[tool.ruff.lint.per-file-ignores]
# Ignore docstring check for script and notebook files
"workflow/scripts/*.py" = ["D100", "D103"]
"*.ipynb" = ["D100", "D103"]
# Ignore all checks for external files
"workflow/lib/external/*.py" = ["ALL"]
# Ignore all checks for docs
"docs/source/*.py" = ["ALL"]
# Ignore all checks for tests
"tests/*.py" = ["ALL"]
# Visualization code
"visualization/*.py" = ["ALL"]
